<resources>
    <string name="my_app_name" translatable="false">RewardsLink</string>
    <string name="cancel">取消</string>
    <string name="chat_dialog_sure">确定</string>
    <string name="chat_pressed_to_speak">按住说话</string>
    <string name="chat_record_failed">录音失败，请重试</string>
    <string name="chat_message_send_hint">发送给 %s</string>
    <string name="chat_message_send_error">消息发送失败</string>
    <string name="chat_message_fetch_error">消息获取失败，请重试</string>
    <string name="chat_message_revoke_error">撤回失败</string>
    <string name="chat_message_delete_error">删除失败</string>
    <string name="chat_message_audio_to_short">录制时间过短</string>
    <string name="chat_message_revoke_content">此消息已撤回</string>
    <string name="chat_message_revoke_over_time">已超过时间无法撤回</string>
    <string name="chat_message_revoked">此消息已撤回</string>
    <string name="chat_message_re_edit">重新编辑 </string>
    <string name="chat_message_voice_in">松开发送，按住滑到空白区域取消</string>
    <string name="chat_message_signal">标记</string>
    <string name="chat_message_open_message_notice">开启消息提醒</string>
    <string name="chat_message_set_top">聊天置顶</string>
    <string name="chat_message_set_ai_pin">PIN置顶</string>
    <string name="chat_message_add_to_black_list">加入黑名单</string>
    <string name="chat_message_delete">删除</string>
    <string name="chat_setting">聊天设置</string>
    <string name="chat_read_status">消息阅读状态</string>
    <string name="chat_read_with_num">已读（%d）</string>
    <string name="chat_unread_with_num">未读（%d）</string>
    <string name="chat_all_user_have_read">全部成员已读</string>
    <string name="chat_all_user_have_unread">全部成员未读</string>
    <string name="chat_message_ait_contact_title">选择提醒</string>
    <string name="chat_message_rich_title_hint">请输入标题</string>
    <string name="chat_message_rich_body_hint">请输入内容</string>
    <string name="chat_no_permission">操作无权限</string>
    <string name="chat_server_request_fail">操作失败</string>
    <string name="chat_server_request_success">操作成功</string>
    <string name="chat_message_take_photo">拍照</string>
    <string name="chat_message_take_video">摄像</string>
    <string name="chat_message_pick_image">从相册选择</string>
    <string name="chat_message_copy_image">获取图片出错</string>
    <string name="chat_message_image_save">图片已保存到手机</string>
    <string name="chat_message_video_save">视频已保存到手机</string>
    <string name="chat_message_image_save_fail">图片保存失败</string>
    <string name="chat_message_video_save_fail">视频保存失败</string>
    <string name="chat_message_video_download_fail">视频下载失败</string>
    <string name="chat_message_video_send_fail">视频发送失败</string>
    <string name="chat_message_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="chat_message_video_time">%02d:%02d</string>
    <string name="chat_message_send">发送</string>
    <string name="chat_message_video_error">无法播放该视频</string>
    <string name="chat_message_more_shoot">拍摄</string>
    <string name="chat_message_camera_unavailable">相机不可用</string>
    <string name="chat_message_location">位置</string>
    <string name="chat_message_file">文件</string>
    <string name="chat_message_video_call">音视频通话</string>
    <string name="chat_message_video_call_action">视频通话</string>
    <string name="chat_message_audio_call_action">语音通话</string>
    <string name="chat_message_translate_action">翻译</string>
    <string name="chat_message_audio_call_text">[语音通话]</string>
    <string name="chat_message_video_call_text">[视频通话]</string>
    <string name="chat_message_call_canceled">已取消</string>
    <string name="chat_message_in_call_canceled">已取消</string>
    <string name="chat_message_in_call_canceled_self">已取消</string>
    <string name="chat_message_call_refused">已拒绝</string>
    <string name="chat_message_call_refused_self">已拒绝</string>
    <string name="chat_message_call_timeout">未接听</string>
    <string name="chat_message_call_busy">忙线未接听</string>
    <string name="chat_message_call_busy_self">忙线未接听</string>
    <string name="chat_message_call_completed">通话时长 &#8195; %s</string>
    <string name="chat_message_multi_record">聊天记录</string>
    <string name="chat_message_multi_record_title">%s的消息</string>
    <string name="chat_message_multi_record_content">%s：%s</string>
    <string name="chat_message_action_copy">复制</string>
    <string name="chat_message_action_reply">回复</string>
    <string name="chat_message_action_transmit">转发</string>
    <string name="chat_message_action_pin">标记</string>
    <string name="chat_message_action_pin_cancel">取消标记</string>
    <string name="chat_message_action_multi_select">多选</string>
    <string name="chat_message_action_delete">删除</string>
    <string name="chat_message_action_recall">撤回</string>
    <string name="chat_message_positive_recall">撤回</string>
    <string name="chat_message_action_collection">收藏</string>
    <string name="chat_message_action_top">置顶</string>
    <string name="chat_message_action_cancel_top">取消置顶</string>
    <string name="chat_message_action_revoke_this_message">撤回此消息</string>
    <string name="chat_message_action_delete_this_message">删除此消息</string>
    <string name="chat_message_removed_tip">该消息已撤回或删除</string>
    <string name="chat_message_reply_someone">回复 %s</string>
    <string name="chat_message_action_copy_success">复制成功！</string>
    <string name="chat_enter_team">%s进入群聊</string>
    <string name="chat_exit_team">%s退出群聊</string>
    <string name="chat_team_need_authentication">需要身份验证</string>
    <string name="chat_team_allow_anyone_join">允许任何人加入</string>
    <string name="chat_team_not_allow_anyone_join">不允许任何人申请加入</string>
    <string name="chat_team_admin_invite">管理员邀请</string>
    <string name="chat_invite">邀请 </string>
    <string name="chat_join_team"> 加入群聊</string>
    <string name="chat_join_discuss_team"> 加入群聊</string>
    <string name="chat_removed_team"> 被移出了群聊</string>
    <string name="chat_removed_discuss_team"> 被移出了群聊</string>
    <string name="chat_left_team">退出了群聊</string>
    <string name="chat_left_discuss_team">退出了群聊</string>
    <string name="chat_dismiss_team">解散了群</string>
    <string name="chat_name_update">更新群名称为\"%s\"</string>
    <string name="chat_team_extension_update">更新了群扩展字段 </string>
    <string name="chat_team_introduce_update">更新了群介绍</string>
    <string name="chat_team_notice_update">更新了群公告</string>
    <string name="chat_team_accept_ones_invent">接受了%s的入群邀请</string>
    <string name="chat_team_verify_update">更新群身份验证权限为</string>
    <string name="chat_team_manager_pass_ones_application">管理员通过用户%s的入群申请</string>
    <string name="chat_team_remove_to_another">将群转移给</string>
    <string name="chat_team_operate_by_manager">被管理员</string>
    <string name="chat_team_mute">禁言</string>
    <string name="chat_team_un_mute">解除禁言</string>
    <string name="chat_team_removed_manager">%s被撤销管理员身份</string>
    <string name="chat_team_appoint_manager">%s被任命为管理员</string>
    <string name="chat_team_add_top_message">置顶了一条消息</string>
    <string name="chat_team_remove_top_message">移除了置顶消息</string>
    <string name="chat_team_extension_server_update">群扩展字段(服务器)被更新为</string>
    <string name="chat_you">你</string>
    <string name="chat_team_avatar_update">更新了群头像</string>
    <string name="chat_team_invitation_permission_update">更新了群权限\"邀请他人权限\"为</string>
    <string name="chat_team_invitation_permission_all">\"所有人\"</string>
    <string name="chat_team_invitation_permission_manager">\"群主和管理员\"</string>
    <string name="chat_team_modify_resource_permission_update">更新了群权限\"群资料修改权限\"为</string>
    <string name="chat_team_modify_permission_all">\"所有人\"</string>
    <string name="chat_team_modify_permission_manager">\"群主和管理员\"</string>
    <string name="chat_team_invited_id_verify_permission_update">更新了群权限\"邀请人身份验证权限\"为</string>
    <string name="chat_team_invited_permission_need">\"需要被邀请方同意\"</string>
    <string name="chat_team_invited_permission_no">\"不需要被邀请方同意\"</string>
    <string name="chat_team_modify_extension_permission_update">更新群权限\"扩展字段修改\"为</string>
    <string name="chat_team_cancel_all_mute">群禁言已关闭</string>
    <string name="chat_team_full_mute">群禁言已开启</string>
    <string name="chat_team_update">群%s被更新为%s</string>
    <string name="chat_team_at_permission_manager_tips">\@所有人权限更新为群主和管理员</string>
    <string name="chat_team_at_permission_all_tips">\@所有人权限更新为所有人</string>
    <string name="chat_team_top_sticky_permission_manager_tips">置顶消息权限更新为群主和管理员</string>
    <string name="chat_team_top_sticky_permission_all_tips">置顶消息权限更新为所有人</string>
    <string name="chat_team_unknown_notification">未知通知</string>
    <string name="chat_team_ait_all">所有人</string>
    <string name="chat_team_be_removed_title">提示</string>
    <string name="chat_team_be_removed_content">该群聊已被解散</string>
    <string name="chat_team_invalid_content">该群聊已不存在</string>
    <string name="chat_team_be_kick_content">您已被移出群聊</string>
    <string name="chat_team_error_tip_content">您已被移出群聊或该群聊已被解散</string>
    <string name="chat_reply_message_brief_image">[图片消息]</string>
    <string name="chat_reply_message_brief_audio">[语音消息]</string>
    <string name="chat_reply_message_brief_video">[视频消息]</string>
    <string name="chat_reply_message_brief_location">[地理位置]</string>
    <string name="chat_reply_message_brief_file">[文件消息]</string>
    <string name="chat_reply_message_brief_custom">[自定义消息]</string>
    <string name="chat_reply_message_brief_robot">[机器人消息]</string>
    <string name="chat_reply_message_call">[音视频通话]</string>
    <string name="chat_message_signal_tip">%s标记了这条信息</string>
    <string name="chat_message_signal_tip_for_team">%s标记了这条信息</string>
    <string name="chat_message_forward_to_team">转发到群组</string>
    <string name="chat_message_forward_to_person">转发到个人</string>
    <string name="chat_message_forward_to">发送给</string>
    <string name="chat_message_is_typing">正在输入中...</string>
    <string name="chat_message_is_typing_fun">对方正在输入中...</string>
    <string name="message_search_title">历史记录</string>
    <string name="message_search_hint">搜索聊天内容</string>
    <string name="message_search_empty">暂无聊天记录</string>
    <string name="chat_team_all_mute">当前群主设置为禁言</string>
    <string name="chat_message_forward_tips">[转发]%s的会话记录</string>
    <string name="chat_message_multi_forward_tips">[合并转发]%s的会话记录</string>
    <string name="chat_message_single_forward_tips">[逐条转发]%s的会话记录</string>
    <string name="permission_deny_tips">您拒绝了权限申请，该功能将无法使用</string>
    <string name="permission_default">请在设置页面添加相关权限</string>
    <string name="permission_camera">请在设置页面添加相机权限</string>
    <string name="permission_audio">请在设置页面添加麦克风权限</string>
    <string name="permission_storage">请在设置页面添加读写手机存储权限</string>
    <string name="chat_permission_camera_title">相机权限使用说明</string>
    <string name="chat_permission_camera_content">用户拍照，视频录制， 视频通话等场景</string>
    <string name="chat_permission_audio_title">麦克风权限使用说明</string>
    <string name="chat_permission_audio_content">用户录制， 音频通话等场景</string>
    <string name="chat_permission_storage_title">存储权限使用说明</string>
    <string name="chat_permission_storage_content">用户发送文件、图片、视频等场景</string>
    <string name="chat_permission_location_title">地理位置使用说明</string>
    <string name="chat_permission_location_content">用户发送地理位置消息， 查看地址位置等场景</string>
    <string name="chat_message_reply_error">获取回复消息错误</string>
    <string name="chat_network_error_tip">当前网络不可用，请检查你的网络设置。</string>
    <string name="chat_kit_no_permission_error">您暂无操作权限</string>
    <string name="send">发送</string>
    <string name="empty">空</string>
    <string name="chatroom_enter_message">输入要说的话...</string>
    <string name="text_result">成绩</string>
    <string name="text_downloader">下载者</string>
    <string name="text_sticker_downloader_info">1下载者 = 4分</string>
    <string name="text_total_tips">收到CP</string>
    <string name="text_sotd_total_tips_info">1 CP = 1分</string>
    <string name="text_total_points">总积分</string>
    <string name="permission_purpose_for_detail_description">您可以阅读完整版%1$s和%2$s</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
</resources>