<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16_dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_result"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cl_content_view"
        app:layout_constraintStart_toStartOf="@+id/cl_content_view"
        app:layout_constraintTop_toBottomOf="@+id/ibCloseButton" />

    <ImageButton
        android:id="@+id/ibCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@null"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/bg_round_corner_grey"
        android:padding="@dimen/dimen_8_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_4_dp"
            android:paddingBottom="@dimen/dimen_4_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ivAudience"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="12dp"
                    android:background="@drawable/ic_audience_v2"
                    android:contentDescription="@string/empty"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvDownloaderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:text="@string/text_downloader"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivAudience"
                app:layout_constraintEnd_toStartOf="@+id/tvDownloaderCount"
                app:layout_constraintStart_toEndOf="@+id/ivAudience"
                app:layout_constraintTop_toTopOf="@+id/ivAudience" />

            <TextView
                android:id="@+id/tvDownloadDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_sticker_downloader_info"
                app:layout_constraintEnd_toStartOf="@+id/tvDownloaderCount"
                app:layout_constraintStart_toStartOf="@+id/tvDownloaderTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDownloaderTitle" />

            <TextView
                android:id="@+id/tvDownloaderCount"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDownloaderTitle"
                tools:text="1000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ivTotalTips"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="23dp"
                    android:background="@drawable/ic_yipps"
                    android:contentDescription="@string/empty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvTotalTipsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:text="@string/text_total_tips"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivTotalTips"
                app:layout_constraintEnd_toStartOf="@+id/tvTotalTipsCount"
                app:layout_constraintStart_toEndOf="@+id/ivTotalTips"
                app:layout_constraintTop_toTopOf="@+id/ivTotalTips" />

            <TextView
                android:id="@+id/tvTotalTipsDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_sotd_total_tips_info"
                app:layout_constraintEnd_toStartOf="@+id/tvTotalTipsCount"
                app:layout_constraintStart_toStartOf="@+id/tvTotalTipsTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalTipsTitle" />

            <TextView
                android:id="@+id/tvTotalTipsCount"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvTotalTipsTitle"
                tools:text="488" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_4_dp"
            android:paddingBottom="@dimen/dimen_4_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ivTotalDownloader"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="22dp"
                    android:background="@drawable/ic_sticker_of_the_day_item"
                    android:contentDescription="@string/empty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvTotalPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:text="@string/text_total_points"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivTotalDownloader"
                app:layout_constraintEnd_toStartOf="@+id/tvTotalPointCount"
                app:layout_constraintStart_toEndOf="@+id/ivTotalDownloader"
                app:layout_constraintTop_toTopOf="@+id/ivTotalDownloader" />

            <TextView
                android:id="@+id/tvTotalPointCount"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvTotalPoint"
                tools:text="3488" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>