<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/llPermissionPurposeConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20_dp"
            android:layout_marginVertical="@dimen/dimen_30_dp"
            android:background="@drawable/dialog_bg"
            android:padding="@dimen/dimen_20_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dimen_8_dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPermissionPurposeList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/dimen_20_dp"
                    android:layout_weight="1"
                    android:overScrollMode="ifContentScrolls"
                    android:scrollbars="vertical"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_permission_purpose" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReadFullVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_purpose_for_detail_description"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnPositive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20_dp"
                        android:layout_marginEnd="@dimen/dimen_5_dp"
                        android:layout_marginBottom="@dimen/dimen_16_dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/btn_rounded_primary_color"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/agree"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        tools:text="Agree" />

                    <Button
                        android:id="@+id/btnNegative"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_5_dp"
                        android:layout_marginTop="@dimen/dimen_20_dp"
                        android:layout_marginBottom="@dimen/dimen_16_dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/shape_grey_solid"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/disagree"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:text="Disagree" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>